fixed an issue where the VideoPopup would be hidden under the ContentDisplay fixed an issue where the Tutorial Snapshot Item would not send preview information to the VideoPopup controller

--- a/client/stylus/app.activity.styl
+++ b/client/stylus/app.activity.styl
@@ -2210,7 +2210,7 @@ div.activity-content-container
   position: absolute
   top 0px
   right 0px
-  z-index 10
+  z-index 1005
   width auto
   max-width 550px
   vendor transition, all 0.5s linear
